cleaned up updateImportance in some of the Index views; added Date (YYYY-MM-DD) to search dropdowns

--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -22,7 +22,7 @@
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
     searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
-    searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    searchCategories.Add(new SelectListItem { Text = "Date (YYYY-MM-DD)", Value = "TimeStamp" });
     searchCategories.Add(new SelectListItem { Text = "Controller Name", Value = "ControllerName" });
     searchCategories.Add(new SelectListItem { Text = "Action Name", Value = "ActionName" });
     searchCategories.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
