--- a/InternshipSkeleton/Views/LogMySql/Index.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/Index.cshtml
@@ -22,7 +22,7 @@
     bool noResults = (Model.TotalItems) == 0;
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
-    searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "DateTimeStamp" });
+    searchCategories.Add(new SelectListItem { Text = "Date (YYYY-MM-DD)", Value = "DateTimeStamp" });
     searchCategories.Add(new SelectListItem { Text = "Function", Value = "logmysql.Function" });
     searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
     searchCategories.Add(new SelectListItem { Text = "Type", Value = "Type" });
