trying to debug page reloading issue

--- a/InternshipSkeleton/Views/LogWebRequest/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/SearchIndex.cshtml
@@ -194,7 +194,7 @@ else
 
         $.ajax({
             method: "POST",
-            async: false,
+            //async: false,
             url: "@Url.Action("UpdateImportance", "LogWebRequest")",
             dataType: "json",
             data: {
