--- a/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogException/AdvancedSearch.cshtml
@@ -41,6 +41,9 @@
     @Html.Label("Stack Trace")
     @Html.TextBox("StackTrace")
 
+    @Html.Label("User who marked as important")
+    @Html.TextBox("UserImportant")
+
     Only get logs marked as important <input type="checkbox" name="Important" value="true" />
 </form>
 <input id="submitForm" type="button" value="Search" />
@@ -61,9 +64,11 @@
         formData.forEach(function (pair) {
             var textBoxTitle = pair.name;
             var textboxValue = pair.value;
-            data["searchDictionary[" + index + "].Key"] = textBoxTitle;
-            data["searchDictionary[" + index + "].Value"] = textboxValue;
-            index++;
+            if (textboxValue != "") {
+                data["searchDictionary[" + index + "].Key"] = textBoxTitle;
+                data["searchDictionary[" + index + "].Value"] = textboxValue;
+                index++;
+            }
         });
         const newform = document.createElement('form');
         newform.method = 'post';
