--- a/InternshipSkeleton/Views/LogException/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogException/SearchIndex.cshtml
@@ -127,8 +127,8 @@ else
     <button class="modalButton" onclick="closeModal()">Cancel</button>
 </div>
 
-
-<script>
+@section scripts {
+    <script>
     var exampleModal;
     var exampleModalVisible = false;
 
@@ -324,4 +324,4 @@ else
         form.submit();
     };
 </script>
-
+}
