--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -26,7 +26,7 @@
     searchCategories.Add(new SelectListItem { Text = "Controller Name", Value = "ControllerName" });
     searchCategories.Add(new SelectListItem { Text = "Action Name", Value = "ActionName" });
     searchCategories.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
-    searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
+    searchCategories.Add(new SelectListItem { Text = "User who marked as important", Value = "UserImportant" });
 }
 <h3 class="tableTitle">LogControllerAction Table</h3>
 <br />
@@ -157,9 +157,9 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
-    <button onclick="closeModal()">Cancel</button>
+    <button class="modalButton" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
+    <button class="modalButton" onclick="closeModal()">Cancel</button>
 </div>
 
 @section scripts
@@ -169,12 +169,10 @@ else
     var exampleModalVisible = false;
 
     var currentUserID = null;
-    //var currentEmailAddress = null;
     var currentTimeStamp = null;
     var currentWebRequestID = null;
     var currentControllerName = null;
     var currentActionName = null;
-    //var currentParameters = null;
 
     var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict));
     var currentid = null;
@@ -187,12 +185,10 @@ else
         event.preventDefault;
 
         currentUserID = UserID;
-        //currentEmailAddress = EmailAddress;
         currentTimeStamp = TimeStamp;
         currentWebRequestID = WebRequestID;
         currentControllerName = ControllerName;
         currentActionName = ActionName;
-        //currentParameters = Parameters;
 
         exampleModal.open();
     }
@@ -201,12 +197,10 @@ else
         event.preventDefault;
 
         currentUserID = null;
-        //currentEmailAddress = null;
         currentTimeStamp = null;
         currentWebRequestID = null;
         currentControllerName = null;
         currentActionName = null;
-        //currentParameters = null;
 
         exampleModal.close();
     }
@@ -232,12 +226,10 @@ else
 
         var model = {
             UserID: currentUserID,
-            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             ControllerName: currentControllerName,
             ActionName: currentActionName,
-            //Parameters: currentParameters,
         };
         debugger;
         $.ajax({
@@ -253,12 +245,10 @@ else
                 document.getElementById("usernameForm").reset();
 
                 currentUserID = null;
-                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentControllerName = null;
                 currentActionName = null;
-                //currentParameters = null;
 
                 if (result.IsCreated) {
                     window.location.reload();
@@ -278,12 +268,10 @@ else
     function markUnimportant(currentUserID, currentTimeStamp, currentWebRequestID, currentControllerName, currentActionName) {
         var model = {
             UserID: currentUserID,
-            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             ControllerName: currentControllerName,
             ActionName: currentActionName,
-            //Parameters: currentParameters,
         };
 
         $.ajax({
@@ -296,12 +284,10 @@ else
 
             success: function (result) {
                 currentUserID = null;
-                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentControllerName = null;
                 currentActionName = null;
-                //currentParameters = null;
 
                 if (result.IsCreated) {
                     window.location.reload();
@@ -352,19 +338,22 @@ else
 
         var dictionary = {};
         var index = 0;
-        var newSearch = (currentsearchInput != "");
 
-        for (var key in currentsearchDictionary) {
-            if (currentsearchDictionary.hasOwnProperty(key)) {
-                dictionary["searchDictionary[" + index + "].Key"] = key;
-                dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
-
-                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
-                    dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
-                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
+        var newSearch = (currentsearchInput != undefined);
+        //if it's a new search, add new search inputs
+        //if not a new search, add old search inputs 
+        if (newSearch) {
+            dictionary["searchDictionary[0].Key"] = currentsearchBy;
+            dictionary["searchDictionary[0].Value"] = currentsearchInput;
+        }
+        else {
+            for (var key in currentsearchDictionary) {
+                if (currentsearchDictionary.hasOwnProperty(key)) {
+                    dictionary["searchDictionary[" + index + "].Key"] = key;
+                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
                 }
+                index = index + 1;
             }
-            index = index + 1;
         }
 
         for (var key in dictionary) {
