LogInfo mark as important seems to be working now; added search by user who marked as important in LogInfo

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -352,7 +352,7 @@ else
         var dictionary = {};
         var index = 0;
 
-        var newSearch = (currentsearchInput != undefined);
+        var newSearch = ((currentsearchInput != undefined) && (currentsearchInput != ""));
         //if it's a new search, add new search inputs
         //if not a new search, add old search inputs 
         if (newSearch) {
