--- a/InternshipSkeleton/Views/LogInfo/AdvancedSearch.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/AdvancedSearch.cshtml
@@ -1,6 +1,5 @@
 ﻿<!-- LogInfo Advanced Search page -->
 
-
 @{
     ViewBag.Title = "AdvancedSearch";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -33,6 +32,9 @@
     @Html.Label("Object")
     @Html.TextBox("Object")
 
+    @Html.Label("User who marked as important")
+    @Html.TextBox("UserImportant")
+
     Only get logs marked as important <input type="checkbox" name="Important" value="true" />
 </form>
 <input id="submitForm" type="button" value="Search" />
@@ -53,9 +55,11 @@
         formData.forEach(function (pair) {
             var textBoxTitle = pair.name;
             var textboxValue = pair.value;
-            data["searchDictionary[" + index + "].Key"] = textBoxTitle;
-            data["searchDictionary[" + index + "].Value"] = textboxValue;
-            index++;
+            if (textboxValue != "") {
+                data["searchDictionary[" + index + "].Key"] = textBoxTitle;
+                data["searchDictionary[" + index + "].Value"] = textboxValue;
+                index++;
+            }
         });
         const newform = document.createElement('form');
         newform.method = 'post';
