--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -26,7 +26,7 @@
     searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
     searchCategories.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
     searchCategories.Add(new SelectListItem { Text = "Object", Value = "Object" });
-    searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
+    searchCategories.Add(new SelectListItem { Text = "User who marked as important", Value = "UserImportant" });
 }
 <h3 class="tableTitle">LogInfo Table</h3>
 <br />
@@ -44,7 +44,6 @@
             @Html.Label("Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-        @Html.HiddenFor(m => m.PageNumber)
         <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
 
         @Html.ActionLink(linkText: "Undo search",
@@ -162,9 +161,9 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
-    <button onclick="closeModal()">Cancel</button>
+    <button class="modalButton" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
+    <button class="modalButton" onclick="closeModal()">Cancel</button>
 </div>
 
 @section scripts
@@ -174,12 +173,10 @@ else
     var exampleModalVisible = false;
 
     var currentUserID = null;
-    //var currentEmailAddress = null;
     var currentTimeStamp = null;
     var currentWebRequestID = null;
     var currentMessage = null;
     var currentMethodName = null;
-    //var currentObject = null;
 
     var currentsearchDictionary = @Html.Raw(Json.Encode(searchDict));
     var currentid = null;
@@ -192,12 +189,10 @@ else
         event.preventDefault;
 
         currentUserID = UserID;
-        //currentEmailAddress = EmailAddress;
         currentTimeStamp = TimeStamp;
         currentWebRequestID = WebRequestID;
         currentMessage = Message;
         currentMethodName = MethodName;
-        //currentObject = Object;
 
         exampleModal.open();
     };
@@ -206,12 +201,10 @@ else
         event.preventDefault;
 
         currentUserID = null;
-        //currentEmailAddress = null;
         currentTimeStamp = null;
         currentWebRequestID = null;
         currentMessage = null;
         currentMethodName = null;
-        //currentObject = null;
 
         exampleModal.close();
     };
@@ -238,12 +231,10 @@ else
         debugger;
         var model = {
             UserID: currentUserID,
-            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             Message: currentMessage,
             MethodName: currentMethodName,
-            //Object: currentObject,
         };
 
         $.ajax({
@@ -259,12 +250,10 @@ else
                 document.getElementById("usernameForm").reset();
 
                 currentUserID = null;
-                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentMessage = null;
                 currentMethodName = null;
-                //currentObject = null;
 
                 if (result.IsCreated) {
                     window.location.reload();
@@ -284,12 +273,10 @@ else
     function markUnimportant(currentUserID, currentTimeStamp, currentWebRequestID, currentMessage, currentMethodName) {
         var model = {
             UserID: currentUserID,
-            //EmailAddress: currentEmailAddress,
             TimeStamp: currentTimeStamp,
             WebRequestID: currentWebRequestID,
             Message: currentMessage,
             MethodName: currentMethodName,
-            //Source: currentObject,
         };
 
         $.ajax({
@@ -302,12 +289,10 @@ else
 
             success: function (result) {
                 currentUserID = null;
-                //currentEmailAddress = null;
                 currentTimeStamp = null;
                 currentWebRequestID = null;
                 currentMessage = null;
                 currentMethodName = null;
-                //currentObject = null;
 
                 if (result.IsCreated) {
                     window.location.reload();
@@ -340,9 +325,8 @@ else
         var sortDirection = formData[1].value;
         var searchBy = formData[2].value;
         var searchInput = formData[3].value;
-        var page = formData[4].value;
 
-        updateButton(page, sortBy, sortDirection, searchBy, searchInput);
+        updateButton(1, sortBy, sortDirection, searchBy, searchInput);
     });
 
     function updateButton(page, sortB, sortD, searchB, searchI) {
@@ -359,19 +343,22 @@ else
 
         var dictionary = {};
         var index = 0;
-        var newSearch = (currentsearchInput != "");
 
-        for (var key in currentsearchDictionary) {
-            if (currentsearchDictionary.hasOwnProperty(key)) {
-                dictionary["searchDictionary[" + index + "].Key"] = key;
-                dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
-
-                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
-                    dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
-                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
+        var newSearch = ((currentsearchInput != undefined) && (currentsearchInput != ""));
+        //if it's a new search, add new search inputs
+        //if not a new search, add old search inputs 
+        if (newSearch) {
+            dictionary["searchDictionary[0].Key"] = currentsearchBy;
+            dictionary["searchDictionary[0].Value"] = currentsearchInput;
+        }
+        else {
+            for (var key in currentsearchDictionary) {
+                if (currentsearchDictionary.hasOwnProperty(key)) {
+                    dictionary["searchDictionary[" + index + "].Key"] = key;
+                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
                 }
+                index = index + 1;
             }
-            index = index + 1;
         }
 
         for (var key in dictionary) {
@@ -403,6 +390,5 @@ else
         document.body.appendChild(form);
         form.submit();
     };
-
 </script>
 }
