--- a/InternshipSkeleton/Views/LogMySql/Index.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/Index.cshtml
@@ -26,7 +26,7 @@
     searchCategories.Add(new SelectListItem { Text = "Function", Value = "logmysql.Function" });
     searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
     searchCategories.Add(new SelectListItem { Text = "Type", Value = "Type" });
-    searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
+    searchCategories.Add(new SelectListItem { Text = "User who marked as important", Value = "UserImportant" });
 }
 <h3 class="tableTitle">LogMySql Table</h3>
 <br />
@@ -44,7 +44,6 @@
             @Html.Label("Search for: ", new { @class = "mylabel" })
             @Html.TextBox("searchInput", null, new { @class = "mytextbox" })
         </div>
-        @Html.HiddenFor(m => m.PageNumber)
         <input type="button" id="searchSubmit" name="searchSubmit" value="Search" class="btn btn-default" style="display: inline-block;" />
 
         @Html.ActionLink(linkText: "Undo search",
@@ -160,9 +159,9 @@ else
 <div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
     <form id="usernameForm">
         Your Email: <input type="text" name="usernameEntry" />
-        <button onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
     </form>
-    <button onclick="closeModal()">Cancel</button>
+    <button class="modalButton" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
+    <button class="modalButton" onclick="closeModal()">Cancel</button>
 </div>
 
 @section scripts
@@ -315,9 +314,8 @@ else
         var sortDirection = formData[1].value;
         var searchBy = formData[2].value;
         var searchInput = formData[3].value;
-        var page = formData[4].value;
 
-        updateButton(page, sortBy, sortDirection, searchBy, searchInput);
+        updateButton(1, sortBy, sortDirection, searchBy, searchInput);
     });
 
     function updateButton(page, sortB, sortD, searchB, searchI) {
@@ -334,19 +332,22 @@ else
 
         var dictionary = {};
         var index = 0;
-        var newSearch = (currentsearchInput != "");
 
-        for (var key in currentsearchDictionary) {
-            if (currentsearchDictionary.hasOwnProperty(key)) {
-                dictionary["searchDictionary[" + index + "].Key"] = key;
-                dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
-
-                if (newSearch && (currentsearchBy == key)) { //update searchDictionary based on new search    
-                    dictionary["searchDictionary[" + index + "].Key"] = currentsearchBy;
-                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchInput;
+        var newSearch = ((currentsearchInput != undefined) && (currentsearchInput != ""));
+        //if it's a new search, add new search inputs
+        //if not a new search, add old search inputs 
+        if (newSearch) {
+            dictionary["searchDictionary[0].Key"] = currentsearchBy;
+            dictionary["searchDictionary[0].Value"] = currentsearchInput;
+        }
+        else {
+            for (var key in currentsearchDictionary) {
+                if (currentsearchDictionary.hasOwnProperty(key)) {
+                    dictionary["searchDictionary[" + index + "].Key"] = key;
+                    dictionary["searchDictionary[" + index + "].Value"] = currentsearchDictionary[key];
                 }
+                index = index + 1;
             }
-            index = index + 1;
         }
         for (var key in dictionary) {
             const hiddenField = document.createElement('input');
