--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -1,53 +1,29 @@
 ﻿
-body {
-
-}
-
+/* --------------------- Custom ----------------- */
 .mydropdown {
     padding: 0px !important;
     font-size: 14px !important;
     -webkit-appearance: menulist !important;
     display: inline-block;
 }
-
 .mytextbox {
     padding: 0px !important;
     font-size: 14px !important;
     display: inline-block;
 }
-
 .pageinputbox {
     width: 50px !important;
     display: inline-block;
 }
-
 .mylabel {
     padding: 0px !important;
     font-size: 14px !important;
     display: inline-block;
     margin: 0px;
 }
-
-.selectedSortLink {
-    text-decoration: none;
-    border: none;
+.mybutton {
     display: inline-block;
-    text-align: center;
-    background-color: #4CAF50; /* Green */
-    color: white;
-    width: 100%;
 }
-
-.sortLink {
-    text-decoration: none;
-    border: none;
-    display: inline-block;
-    text-align: center;
-    background-color: #555555;
-    color: white;
-    width: 100%;
-}
-
 .modalButton {
     padding: 10px 24px;
     margin: 10px;
@@ -58,85 +34,85 @@ body {
     background-color: #4CAF50;
     color: white;
 }
-
 .pageLabel {
     border: 1px solid black;
     font-size: 14px !important;
     padding: inherit;
 }
-
-.btn-group button {
-    background-color: #4CAF50; /* Green background */
-    border: 1px solid green; /* Green border */
-    color: white; /* White text */
-    padding: 10px 24px; /* Some padding */
-    cursor: pointer; /* Pointer/hand icon */
-    float: left; /* Float the buttons side by side */
+.body-content {
+    padding-top: 50px;
+}
+.tableTitle {
+    text-align: center;
+}
+.dateRange {
+    padding: 0px;
+}
+.myblock {
+    width: 25% !important;
     display: inline-block;
 }
 
-.btn-group button:not(:last-child) {
-    border-right: none; /* Prevent double borders */
+
+/* ------------------------------- Sorting Links -------------------- */
+.selectedSortLink {
+    text-decoration: none;
+    border: none;
+    display: inline-block;
+    text-align: center;
+    background-color: #4CAF50; /* Green */
+    color: white;
+    width: 100%;
+}
+.sortLink {
+    text-decoration: none;
+    border: none;
+    display: inline-block;
+    text-align: center;
+    background-color: #555555;
+    color: white;
+    width: 100%;
 }
 
-/* Clear floats (clearfix hack) */
+
+
+/* ---------------------------- Button Group----------------------- */
 .btn-group:after {
     content: "";
     clear: both;
     display: table;
 }
 
-/* Add a background color on hover */
-.btn-group button:hover {
-    background-color: #3e8e41;
-}
-
-.openModalButton {
-    background-color: grey;
-    color: white;
-    font-size: 20px;
-}
-
-.markUnimportantButton {
-    background-color: orangered;
-    color: white;
-    font-size: 20px;
-}
-
+/* ------------------------------------ Table stuff ----------------------- */
 table, thead, td, tr {
     border: 1px solid;
     overflow: auto;
     table-layout: fixed;
     text-align: left;
 }
-
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+.mytable {
+    width:100%; 
+    text-align:center;
+}
 
+/* -------------------------------------- Div spacing ------------------------- */
 .container {
     width: 100%;
 }
-
 .block {
     display: inline-block;
 }
 
+
+/* --------------------------------------Navigation bar --------------------------- */
 .navbar-nav > .active > a,
 .navbar-nav > .active > a:focus,
 .navbar-nav > .active > a:hover {
-    background-color: #333;
-    color: #fff;
+    background-color: #333 !important;
+    color: #fff !important;
 }
 
-.body-content {
-    padding-top: 50px;
-}
 
-.tableTitle {
-    text-align: center;
-}
-
-.dateRange {
-    padding:0px;
-}
