--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -59,6 +59,7 @@
 </html>
 
 <script>
+    //adding and removing the active class to the navbar links 
     $(document).ready(function () {
         debugger;
         $('li.active').removeClass('active');
