fixed size of page jump to input box

--- a/InternshipSkeleton/Views/LogMySql/Index.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/Index.cshtml
@@ -83,7 +83,7 @@
                 <div class="block">
                     @Html.Label("Page: ", new { @class = "mylabel" })
                 </div>
-                <div class="block">
+                <div class="block pageinputbox">
                     @Html.TextBox("id")
                 </div>
                 <button type="button" id="btnSubmit" class="btn btn-default">Jump to page</button>
